Removing very specific functions from StringUtils